--- a/Feistel_envsettings.html
+++ b/Feistel_envsettings.html
@@ -16,42 +16,42 @@
 <tr>
 <td>PATHEXT</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 <td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 <td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 </tr>
 <tr>
 <td>Path</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\dotnet\;<br>C:\WINDOWS\system32\config\systemprofile\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files (x86)\Skype\Phone\;<br>C:\WINDOWS\System32\OpenSSH\;<br>C:\Program Files\nodejs\;<br>C:\Users\Filip\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Filip\AppData\Roaming\npm</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\dotnet\;<br>C:\WINDOWS\system32\config\systemprofile\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files (x86)\Skype\Phone\;<br>C:\WINDOWS\System32\OpenSSH\;<br>C:\Program Files\nodejs\;<br>C:\Users\Filip\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Filip\AppData\Roaming\npm</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\dotnet\;<br>C:\WINDOWS\system32\config\systemprofile\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files (x86)\Skype\Phone\;<br>C:\WINDOWS\System32\OpenSSH\;<br>C:\Program Files\nodejs\;<br>C:\Users\Filip\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Filip\AppData\Roaming\npm</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\dotnet\;<br>C:\WINDOWS\system32\config\systemprofile\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files (x86)\Skype\Phone\;<br>C:\WINDOWS\System32\OpenSSH\;<br>C:\Program Files\nodejs\;<br>C:\Users\Filip\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Filip\AppData\Roaming\npm</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\dotnet\;<br>C:\WINDOWS\system32\config\systemprofile\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files (x86)\Skype\Phone\;<br>C:\WINDOWS\System32\OpenSSH\;<br>C:\Program Files\nodejs\;<br>C:\Users\Filip\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Filip\AppData\Roaming\npm</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 </tr>
@@ -350,28 +350,28 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td>-intstyle</td>
-<td>&nbsp;</td>
-<td>ise</td>
-<td>None</td>
+<td><font color=gray>-intstyle</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>ise</font></td>
+<td><font color=gray>None</font></td>
 </tr>
 <tr>
-<td>-dd</td>
-<td>&nbsp;</td>
-<td>_ngo</td>
-<td>None</td>
+<td><font color=gray>-dd</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>_ngo</font></td>
+<td><font color=gray>None</font></td>
 </tr>
 <tr>
-<td>-p</td>
-<td>&nbsp;</td>
-<td>xc3s500e-fg320-5</td>
-<td>None</td>
+<td><font color=gray>-p</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>xc3s500e-fg320-5</font></td>
+<td><font color=gray>None</font></td>
 </tr>
 <tr>
-<td>-uc</td>
-<td>&nbsp;</td>
-<td>GenIO.ucf</td>
-<td>None</td>
+<td><font color=gray>-uc</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>GenIO.ucf</font></td>
+<td><font color=gray>None</font></td>
 </tr>
 </TABLE>
 <A NAME="Map Property Settings"></A>
@@ -473,28 +473,28 @@
 <tr>
 <td>CPU Architecture/Speed</td>
 <td>Intel(R) Core(TM) i5-5200U CPU @ 2.20GHz/2197 MHz</td>
-<td>Intel(R) Core(TM) i5-5200U CPU @ 2.20GHz/2197 MHz</td>
+<td><font color=gray>Intel(R) Core(TM) i5-5200U CPU @ 2.20GHz/2197 MHz</font></td>
 <td><font color=gray>Intel(R) Core(TM) i5-5200U CPU @ 2.20GHz/2197 MHz</font></td>
 <td><font color=gray>Intel(R) Core(TM) i5-5200U CPU @ 2.20GHz/2197 MHz</font></td>
 </tr>
 <tr>
 <td>Host</td>
 <td>DEATHSTAR1</td>
-<td>DEATHSTAR1</td>
+<td><font color=gray>DEATHSTAR1</font></td>
 <td><font color=gray>DEATHSTAR1</font></td>
 <td><font color=gray>DEATHSTAR1</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft , 64-bit</td>
-<td>Microsoft , 64-bit</td>
+<td><font color=gray>Microsoft , 64-bit</font></td>
 <td><font color=gray>Microsoft , 64-bit</font></td>
 <td><font color=gray>Microsoft , 64-bit</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>major release  (build 9200)</td>
-<td>major release  (build 9200)</td>
+<td><font color=gray>major release  (build 9200)</font></td>
 <td><font color=gray>major release  (build 9200)</font></td>
 <td><font color=gray>major release  (build 9200)</font></td>
 </tr>
